Fixes z-index issue with showcase section.

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -8,6 +8,7 @@
   max-width: $max-width;
   margin: 0 auto;
 
+  z-index: 100;
 
   height: 50px;
 
